--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.2.0",
-    "eslint": "^9.2.0",
+    "@jest/globals": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "globals": "^15.2.0",
     "prettier": "^3.2.5"
   },
