--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Node.js genDiff",
-  "main": "gendiff.js",
+  "main": "src/index.js",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,9 +20,11 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "globals": "^15.2.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "commander": "^12.0.0",
     "lodash": "^4.17.21"
   }
 }
