--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "type": "module",
   "description": "Node.js genDiff",
   "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daniscoder/frontend-project-46"
+  },
+  "bugs": {
+    "url": "https://github.com/daniscoder/frontend-project-46/issues"
+  },
+  "homepage": "https://github.com/daniscoder/frontend-project-46#readme",
+  "author": "Danis Arslanov",
+  "license": "ISC",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "lint": "npx eslint ."
   },
-  "author": "Danis Arslanov",
-  "license": "ISC",
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.2.0",
